; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp2.c_M68KStart.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp2.c_M68KStart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (...)* }

@scsp_thread_running = common dso_local global i64 0, align 8
@M68K = common dso_local global %struct.TYPE_2__* null, align 8
@m68k_saved_cycles = common dso_local global i64 0, align 8
@m68k_running = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @M68KStart() #0 {
  %1 = load i64, i64* @scsp_thread_running, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @ScspSyncThread()
  br label %5

5:                                                ; preds = %3, %0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @M68K, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32 (...)*, i32 (...)** %7, align 8
  %9 = call i32 (...) %8()
  store i64 0, i64* @m68k_saved_cycles, align 8
  store i32 1, i32* @m68k_running, align 4
  %10 = load i64, i64* @scsp_thread_running, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %5
  %13 = call i32 (...) @PSP_FLUSH_ALL()
  br label %14

14:                                               ; preds = %12, %5
  ret void
}

declare dso_local i32 @ScspSyncThread(...) #1

declare dso_local i32 @PSP_FLUSH_ALL(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
